--- a/ERPAnimalia/Views/Product/Add.cshtml
+++ b/ERPAnimalia/Views/Product/Add.cshtml
@@ -126,7 +126,7 @@
 
 
         function HideSubcategory() {
-           
+           debugger;
             var idCategory = $('#IdCategory').val();
             if (idCategory == 2) {
                 $('#IdSubCategory').val(3);
