--- a/ERPAnimalia/Views/Home/Index.cshtml
+++ b/ERPAnimalia/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 }
 <head>
     <meta name="viewport" content="width=device-width" />
-    <script src="~/Scripts/jquery-2.1.4.min.js"></script>
-    <script src="~/Scripts/gijgo.js"></script>
+    <script src="~/Scripts/gijgo/combined/gijgo.js"></script>
+    <script src="~/Scripts/jquery-ui.js"></script>
     <link href="~/Content/css/Voucher.css" rel="stylesheet" />
 
 </head>
